--- a/index.html
+++ b/index.html
@@ -21,16 +21,7 @@
         <link rel="stylesheet" href="./index_files/style.css">
 
         <link rel="shortcut icon" type="image/x-icon" href="./index_files/myicon.png" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-	    <style>
-	        .textbox {
-	            width: 110px;
-	            height: 32px;
-	            padding: 10px -10px 10px 10px;
-	            border: 5px solid black;
-	            margin: 0;
-	        }
-	    </style>	
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">	
     </head>
     <body>
         <div class="sidebar">
@@ -252,7 +243,7 @@
 
 		<p>My research has been recognized with prestigious awards, including the <a href="https://gradschool.duke.edu/about/news/engineering-phd-graduate-receives-dissertation-award/">Council of Graduate Schools/ProQuest Distinguished Dissertation Award in Mathematics, Physical Sciences, and Engineering</a>, and an <a href="https://ece.duke.edu/phd/students/awards-honors">Outstanding Dissertation award</a> from the department of Electrical and Computer Engineering at Duke University. I also received a <a href="https://past.date-conference.com/proceedings-archive/2017/html/bestpaper.html">Best Paper Award</a> at the 2017 DATE Conference.<br></p>
 
-		<h4><span class="textbox"><font color="red">"I am on the academic job market this year! If your institution is looking for someone who does multidisciplinary research in hardware-accelerated AI, embedded systems, or hardware-software co-design, please reach out!"</font></span></h4>
+		<h4><font color="red">"I am on the academic job market this year! If your institution is looking for someone who does multidisciplinary research in hardware-accelerated AI, embedded systems, or hardware-software co-design, please reach out!"</font></h4>
 		
         	<h1><font color="red">Press</font></h1>
 
