--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
             <div class="news_subtitle"><font color="red">Recent News:</font><br><br>
 				<div class="news_text" align="justify">	
 
-	            <font color="blue">August 2024:</font> Our journal paper is accepted for publication in IEEE TCASAI!<br><br>
+	            <font color="blue">September 2024:</font> Dr. Ibrahim will serve as a TPC member for the 2025 DATE.<br><br>
+					
+		    <font color="blue">August 2024:</font> Our journal paper is accepted for publication in IEEE TCASAI!<br><br>
 
 		    <font color="blue">July 2024:</font> Dr. Ibrahim will serve as a TPC member for the 2025 ASP-DAC.<br><br>
 				
