--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
             <div class="news_subtitle"><font color="red">Recent News:</font><br><br>
 				<div class="news_text" align="justify">	
 
-	            <font color="blue">September 2024:</font> Dr. Ibrahim will serve as a TPC member for the 2025 DATE.<br><br>
+	            <font color="blue">February 2025:</font> Our work on embodied AI acceleration accepted to ASPLOS.<br><br>
+
+		    <font color="blue">January 2025:</font> Dr. Ibrahim will serve as a TPC member for the 2025 ASAP.<br><br>
+
+	            <font color="blue">September 2024:</font> Dr. Ibrahim will serve as a TPC member for the 2025 DATE.<br><br>					
 					
 		    <font color="blue">August 2024:</font> Our journal paper is accepted for publication in IEEE TCASAI!<br><br>
 
@@ -906,6 +910,19 @@
             <h1><font color="red">Peer-Reviewed Conference Papers</font></h1>
             <div class="research_list">
                 <ul>
+
+                  <li><table>
+                        <tbody><tr>
+                            <th class="tagcell">
+                                <div class="tag conference">C25</div>
+                            </th>
+                            <th class="content">
+                                <span class="title">ReCA: Integrated Acceleration for Real-Time and Efficient Cooperative Embodied Autonomous Agents</span> <br>
+                                By Zishen Wan, Yuhang Du, <strong>Mohamed Ibrahim</strong>, Jiayi Qian, Jason Jabbour, Yang (Katie) Zhao, Vijay Janapa Reddi, Tushar Krishna, and Arijit Raychowdhury.<br>
+                                <i>Proceedings of ACM International Conference on Architectural Support for Programming Languages and Operating Systems (ASPLOS)</i>, 2025.<br>
+                            </th>
+                        </tr>
+                    </tbody></table></li>
                   <li><table>
                         <tbody><tr>
                             <th class="tagcell">
