--- a/index.html
+++ b/index.html
@@ -506,17 +506,6 @@
         </div>
 
 		<div class="maintext" id="research_place" style="display: none;" align="justify">
-		<h1><font color="red">Collaboration</font></h1>
-        <p>Dr. Mohamed Ibrahim has collaborated with many research groups, working on design methodologies and security of bio-systems. Here is the list of collaborators: </p>
-            <ul>
-                <li> <a href="https://scholars.duke.edu/person/kristin.scott">Duke Molecular Genetics and Microbiology</a> (<font color="red">Professor Kristin Scott</font>): Study, implementation, and modeling of benchtop biomolecular analysis</li>
-                <li> <a href="http://microfluidics.ee.duke.edu">Duke Microfluidics Lab</a> (<font color="red">Professor Richard Fair</font>): Design and test of cyber-physical digital microfluidic platforms that enable resilient control of biochemical reactions</li>
-                <li> <a href="http://cyber.nyu.edu">NYU Center for Cybersecurity</a> (<font color="red">Professor Ramesh Karri</font>): Security and trust of microfluidic devices and forensic DNA-analysis flows </li> 
-                <li> <a href="http://www.informatik.uni-bremen.de/agra/eng/team.php">UBremen Computer Architecture Group</a> (<font color="red">Professor Rolf Drechsler</font>): Developing efficient synthesis techniques (using formal methods, e.g., satisfiability modulo theories "SMT") for digital microfluidic biochips to support biomolecular quantitative-analysis applications </li>
-                <li> <a href="https://www.eda.ei.tum.de/en/home/">TUM Chair of Electronic Design Automation</a> (<font color="red">Professor Ulf Schlichtmann</font>): Optimizing flow-based microfluidic systems to enable integrated biomolecular analysis </li> 
-                <li> <a href="http://cpsl.pratt.duke.edu">Duke Cyber-Physical Systems Lab</a> (<font color="red">Professor Miroslav Pajic</font>): Introducing cyber-physical system and real-time system theories into lab-on-chip designs to support dynamic execution of quantitative analysis</li>
-                <li> <a href="https://maria.gorlatova.com/">Duke's Internet of Things Group</a> (<font color="red">Professor Maria Gorlatova</font>), HP Labs (<font color="red">Dr. Jun Zeng</font>), and MSG Group, Germany (<font color="red">Dr. Farshad Firouzi</font>): Defining the Internet of Microfluidic Things. </li>
-            </ul><br><br>
         <h1><font color="red">Research Projects</font></h1>
         <p style="text-align:center;"><strong>[<font color="red">Click on the images to read more details!</font>]</strong></p>
         <h4><font color="blue">1.  Hardware-Software Codesign for Real-Time Error Recovery in Cyber-Physical Digital Microfluidic Biochips [<font color="red">Completed</font>]</font></h4>
@@ -579,7 +568,7 @@
                             <th class="content">
                                 <span class="title">Optimization of Trustworthy Biomolecular Quantitative Analysis Using Cyber-Physical Microfluidic Platforms</span> <br>
                                 By <strong>Mohamed Ibrahim</strong> and Krishnendu Chakrabarty.<br>
-                                [ In Preparation ][ In Print by <font color="red">June/July 2020</font> ]<br>
+                                CRC Press, 2020.<br>
                             </th>
                         </tr>
                     </tbody></table></li>
