--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
 		<p>My research has been recognized with prestigious awards, including the <a href="https://gradschool.duke.edu/about/news/engineering-phd-graduate-receives-dissertation-award/">Council of Graduate Schools/ProQuest Distinguished Dissertation Award in Mathematics, Physical Sciences, and Engineering</a>, and an <a href="https://ece.duke.edu/phd/students/awards-honors">Outstanding Dissertation award</a> from the department of Electrical and Computer Engineering at Duke University. I also received a <a href="https://past.date-conference.com/proceedings-archive/2017/html/bestpaper.html">Best Paper Award</a> at the 2017 DATE Conference.<br></p>
 
-		<h4><font color="red">"I’m excited to share that I will be joining the University of Texas at Dallas as a tenure-track Assistant Professor in Electrical and Computer Engineering starting Fall 2025! If you’re interested in pursuing a PhD and joining my research group, feel free to reach out!"</font></h4>
+		<div class="box">"I’m excited to share that I will be joining the University of Texas at Dallas as a tenure-track Assistant Professor in Electrical and Computer Engineering starting Fall 2025! If you’re interested in pursuing a PhD and joining my research group, feel free to reach out!"</div>
 		
         	<h1><font color="red">Press</font></h1>
 		<ul>
