--- a/index.html
+++ b/index.html
@@ -22,12 +22,18 @@
 
         <link rel="shortcut icon" type="image/x-icon" href="./index_files/myicon.png" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">	
+
+	block {
+  		background-color: lightgrey;
+  		padding: 10px;
+  		margin: 20px;
+	}	
     </head>
     <body>
         <div class="sidebar">
 		<center><img src="./index_files/Ibrahim.jpg" width="60%" ></center>
             <div class="name"><center>Mohamed Ibrahim</center></div>
-	    <div class="subtitle"><br> <center>Senior Research Staff<br>		
+	    <div class="subtitle"><br> <center>Research Faculty Member<br>		
             	<center>School of ECE<br>
                 <center><font color="blue">Georgia Tech</font>
             </center></center></center></div>
@@ -250,7 +256,7 @@
 
 		<p>My research has been recognized with prestigious awards, including the <a href="https://gradschool.duke.edu/about/news/engineering-phd-graduate-receives-dissertation-award/">Council of Graduate Schools/ProQuest Distinguished Dissertation Award in Mathematics, Physical Sciences, and Engineering</a>, and an <a href="https://ece.duke.edu/phd/students/awards-honors">Outstanding Dissertation award</a> from the department of Electrical and Computer Engineering at Duke University. I also received a <a href="https://past.date-conference.com/proceedings-archive/2017/html/bestpaper.html">Best Paper Award</a> at the 2017 DATE Conference.<br></p>
 
-		<div class="box">"I’m excited to share that I will be joining the University of Texas at Dallas as a tenure-track Assistant Professor in Electrical and Computer Engineering starting Fall 2025! If you’re interested in pursuing a PhD and joining my research group, feel free to reach out!"</div>
+		<block><font color="red">"I’m excited to share that I will be joining the University of Texas at Dallas as a tenure-track Assistant Professor in Electrical and Computer Engineering starting Fall 2025! If you’re interested in pursuing a PhD and joining my research group, feel free to reach out!"</font></block>
 		
         	<h1><font color="red">Press</font></h1>
 		<ul>
