--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <link rel="shortcut icon" type="image/x-icon" href="./index_files/myicon.png" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">	
 	<style>
-	.block {
+	div {
   		background-color: lightgrey;
   		padding: 10px;
   		margin: 20px;
@@ -257,7 +257,7 @@
 
 		<p>My research has been recognized with prestigious awards, including the <a href="https://gradschool.duke.edu/about/news/engineering-phd-graduate-receives-dissertation-award/">Council of Graduate Schools/ProQuest Distinguished Dissertation Award in Mathematics, Physical Sciences, and Engineering</a>, and an <a href="https://ece.duke.edu/phd/students/awards-honors">Outstanding Dissertation award</a> from the department of Electrical and Computer Engineering at Duke University. I also received a <a href="https://past.date-conference.com/proceedings-archive/2017/html/bestpaper.html">Best Paper Award</a> at the 2017 DATE Conference.<br></p>
 
-		<div class="box"><font color="red">"I’m excited to share that I will be joining the University of Texas at Dallas as a tenure-track Assistant Professor in Electrical and Computer Engineering starting Fall 2025! If you’re interested in pursuing a PhD and joining my research group, feel free to reach out!"</font></div>
+		<div><font color="blue">"I’m excited to share that I will be joining the University of Texas at Dallas as a tenure-track Assistant Professor in Electrical and Computer Engineering starting Fall 2025! If you’re interested in pursuing a PhD and joining my research group, feel free to reach out!"</font></div>
 		
         	<h1><font color="red">Press</font></h1>
 		<ul>
