--- a/index.html
+++ b/index.html
@@ -22,13 +22,7 @@
 
         <link rel="shortcut icon" type="image/x-icon" href="./index_files/myicon.png" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">	
-	<style>
-	.box {
-  		background-color: lightgrey;
-  		padding: 10px;
-  		margin: 20px;
-	}	
-	</style>
+
     </head>
     <body>
         <div class="sidebar">
@@ -257,7 +251,7 @@
 
 		<p>My research has been recognized with prestigious awards, including the <a href="https://gradschool.duke.edu/about/news/engineering-phd-graduate-receives-dissertation-award/">Council of Graduate Schools/ProQuest Distinguished Dissertation Award in Mathematics, Physical Sciences, and Engineering</a>, and an <a href="https://ece.duke.edu/phd/students/awards-honors">Outstanding Dissertation award</a> from the department of Electrical and Computer Engineering at Duke University. I also received a <a href="https://past.date-conference.com/proceedings-archive/2017/html/bestpaper.html">Best Paper Award</a> at the 2017 DATE Conference.<br></p>
 
-		<div class="box"><p><font color="blue">"I’m excited to share that I will be joining the University of Texas at Dallas as a tenure-track Assistant Professor in Electrical and Computer Engineering starting Fall 2025! If you’re interested in pursuing a PhD and joining my research group, feel free to reach out!"</p></font></div>
+		<p><strong><font color="blue">"I’m excited to share that I will be joining the University of Texas at Dallas as a tenure-track Assistant Professor in Electrical and Computer Engineering starting Fall 2025! If you’re interested in pursuing a PhD and joining my research group, feel free to reach out!"</font></strong></p>
 		
         	<h1><font color="red">Press</font></h1>
 		<ul>
