--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
 		<p>My research has been recognized with prestigious awards, including the <a href="https://gradschool.duke.edu/about/news/engineering-phd-graduate-receives-dissertation-award/">Council of Graduate Schools/ProQuest Distinguished Dissertation Award in Mathematics, Physical Sciences, and Engineering</a>, and an <a href="https://ece.duke.edu/phd/students/awards-honors">Outstanding Dissertation award</a> from the department of Electrical and Computer Engineering at Duke University. I also received a <a href="https://past.date-conference.com/proceedings-archive/2017/html/bestpaper.html">Best Paper Award</a> at the 2017 DATE Conference.<br></p>
 
-		<p><strong><font color="blue" background-color="yellow">"I'm excited to share that I will be joining the University of Texas at Dallas as a tenure-track Assistant Professor in Electrical and Computer Engineering starting Fall 2025! If you’re interested in pursuing a PhD and joining my research group, feel free to reach out!"</font></strong><br></p>
+		<p><strong><font color="blue">"I'm excited to share that I will be joining the University of Texas at Dallas as a tenure-track Assistant Professor in Electrical and Computer Engineering starting Fall 2025! If you’re interested in pursuing a PhD and joining my research group (The Embodied AI Circuits, Architectures, and Systems Group), feel free to reach out!"</font></strong><br></p>
 		
         	<h1><font color="red">Press</font></h1>
 		<ul>
@@ -263,11 +263,11 @@
             <ul>
                   <li><strong>Computer Systems:</strong> AI Hardware; Embedded Systemds; Domain-Specific Accelerators; Hardware-Software Co-Design.</li>
 
-                  <li><strong>Brain-Inspired Computing:</strong> Hyperdimensional Computing; Neuro-Symbolic AI; Embodied Cognition.</li>
+                  <li><strong>Brain-Inspired Computing:</strong> Hyperdimensional Computing; Neuro-Symbolic AI; Foundation Models.</li>
 		    
                   <li><strong>VLSI and CAD:</strong> Digital Circuits Design; Design-for-Test; Energy Efficiency; Electronic Design Automation.</li> 		    
 		    
-                  <li><strong>Human-Centered Computing:</strong> Cyber-Physical Healthcare; Robotics; Prosthetics; Wearables.</li>
+                  <li><strong>Embodied Computing:</strong> Cyber-Physical Integration; Robotics; Smart Wearables.</li>
             </ul>
 
 	    <h1><font color="red">Honors and Awards</font></h1>
