--- a/index.html
+++ b/index.html
@@ -334,38 +334,11 @@
         
         <div class="maintext" id="publication_place" style="display: none;">
         
-			<h2><font color="red"><strong>Standard Disclaimer</strong></font></h2>
-			<p>"This material is presented to ensure timely dissemination of scholarly and technical work. Copyright and all rights therein are retained by authors or other copyright holders. All persons copying this information are expected to adhere to the terms and constraints invoked by each author's copyright. In most cases, these works may not be reposted without explicit permission of the copyright holder."
-			</p><br>
 			<h1><font color="red">Books</font></h1>
-			<div class="research_list">
-				<ul>
-					<li><table>
-                        <tbody><tr>
-                            <th class="tagcell">
-                                <div class="tag book">B2</div>
-                            </th>
-                            <th class="content">
-                                <span class="title">Optimization of Trustworthy Biomolecular Quantitative Analysis Using Cyber-Physical Microfluidic Platforms</span> <br>
-                                By <strong>Mohamed Ibrahim</strong> and Krishnendu Chakrabarty.<br>
-                                CRC Press, 2020.<br>
-                            </th>
-                        </tr>
-                    </tbody></table></li>
-                    <li><table>
-                        <tbody><tr>
-                            <th class="tagcell">
-                                <div class="tag book">B1</div>
-                            </th>
-                            <th class="content">
-                                <span class="title">Secure and Trustworthy Cyberphysical Microfluidic Biochips</span> <br>
-                                By Jack Tang, <strong>Mohamed Ibrahim</strong>, Krishnendu Chakrabarty, and Ramesh Karri.<br>
-                                Springer, 2020.<br>
-                            </th>
-                        </tr>
-                    </tbody></table></li>
-				</ul>
-			</div>
+			<ul>
+			<li><i>Optimization of Trustworthy Biomolecular Quantitative Analysis Using Cyber-Physical Microfluidic Platforms,</i> <strong>Mohamed Ibrahim</strong> and Krishnendu Chakrabarty, CRC Press, 2020. <br></li>
+			<li><i>Secure and Trustworthy Cyberphysical Microfluidic Biochips,</i> Jack Tang, <strong>Mohamed Ibrahim</strong>, Krishnendu Chakrabarty, and Ramesh Karri, Springer, 2020. <br></li>
+			</ul>
             <h1><font color="red">Book Chapters</font></h1>
             <div class="research_list">
                 <ul>
