--- a/index.html
+++ b/index.html
@@ -335,10 +335,10 @@
         <div class="maintext" id="publication_place" style="display: none;">
         
 			<h1><font color="red">Books</font></h1>
-			<ul>
+			<ol reversed>
 			<li><i>Optimization of Trustworthy Biomolecular Quantitative Analysis Using Cyber-Physical Microfluidic Platforms,</i> <strong>Mohamed Ibrahim</strong> and Krishnendu Chakrabarty, CRC Press, 2020. <br></li>
 			<li><i>Secure and Trustworthy Cyberphysical Microfluidic Biochips,</i> Jack Tang, <strong>Mohamed Ibrahim</strong>, Krishnendu Chakrabarty, and Ramesh Karri, Springer, 2020. <br></li>
-			</ul>
+			</ol>
             <h1><font color="red">Book Chapters</font></h1>
             <div class="research_list">
                 <ul>
