--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         <link rel="shortcut icon" type="image/x-icon" href="./index_files/myicon.png" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">	
 
+	<style>
+	li {
+	  margin: 10px 0;
+	}
+	</style>
     </head>
     <body>
         <div class="sidebar">
