--- a/index.html
+++ b/index.html
@@ -407,213 +407,30 @@
                 	</ol>
 
 		  
-            <h1><font color="red">Posters & Talks</font></h1>
-            <div class="research_list">
-                <ul>
-                  <li><table>
-                        <tbody><tr>
-                            <th class="tagcell">
-                                <div class="tag working">PT18</div>
-                            </th>
-                            <th class="content">
-                                <span class="title">Efficient Design of a Hyperdimensional Processing Unit for Multi-Layer Cognition</span> <br>
-                                <i>Talk and Poster at the IEEE/ACM Design, Automation and Test in Europe Conference (DATE)</i>, Valencia, Spain, March 2024.<br>
-                            </th>
-                        </tr>
-                    </tbody></table></li>
-                  <li><table>
-                        <tbody><tr>
-                            <th class="tagcell">
-                                <div class="tag working">PT17</div>
-                            </th>
-                            <th class="content">
-                                <span class="title">The Hyperdimensional Processing Unit</span> <br>
-                                <i>Poster at IBM IEEE CAS/EDS AI Compute Symposium</i>, Yorktown Heights, New York, USA, October 2022 (Presented by Youbin Kim).<br>
-                            </th>
-                        </tr>
-                    </tbody></table></li> 			
-                  <li><table>
-                        <tbody><tr>
-                            <th class="tagcell">
-                                <div class="tag working">PT16</div>
-                            </th>
-                            <th class="content">
-                                <span class="title">AdaPool: Multi-Armed Bandits for Adaptive Virology Screening on Cyber-Physical Digital-Microfluidic Biochips</span> <br>
-                                <i>Talk at the ACM/IEEE Workshop on Machine Learning for CAD (MLCAD)</i>, Virtual, November 2020.<br>
-                            </th>
-                        </tr>
-                    </tbody></table></li> 			
-                  <li><table>
-                        <tbody><tr>
-                            <th class="tagcell">
-                                <div class="tag working">PT15</div>
-                            </th>
-                            <th class="content">
-                                <span class="title">Internet of Microfluidic Things: Perspectives on System Architecture and Design Challenges</span> <br>
-                                <i>Talk at the IEEE/ACM International Conference on Computer-Aided Design (ICCAD)</i>, Colorado, USA, November 2019.<br>
-                            </th>
-                        </tr>
-                    </tbody></table></li>                     
-                  <li><table>
-                        <tbody><tr>
-                            <th class="tagcell">
-                                <div class="tag working">PT14</div>
-                            </th>
-                            <th class="content">
-                                <span class="title">BioScan: Parameter-Space Exploration of Synthetic Biocircuits Using MEDA Biochips</span> <br>
-                                <i>Talk at the IEEE/ACM Design, Automation and Test in Europe Conference (DATE)</i>, Florence, Italy, March 2019.<br>
-                            </th>
-                        </tr>
-                    </tbody></table></li>  
-                  <li><table>
-                        <tbody><tr>
-                            <th class="tagcell">
-                                <div class="tag working">PT13</div>
-                            </th>
-                            <th class="content">
-                                <span class="title">Sortex: Efficient Timing-Driven Synthesis of Reconfigurable Flow-Based Biochips for Scalable Single-Cell Screening</span> <br>
-                                <i>Talk at the IEEE/ACM International Conference on Computer-Aided Design (ICCAD)</i>, Irvine, California, USA, November 2017.<br>
-                            </th>
-                        </tr>
-                    </tbody></table></li>                                                                                                                                                        
-                  <li><table>
-                        <tbody><tr>
-                            <th class="tagcell">
-                                <div class="tag working">PT12</div>
-                            </th>
-                            <th class="content">
-                                <span class="title">Design and Optimization of Microfluidic Platforms for Scalable Biomolecular Quantitative Analysis</span> <br>
-                                <i>Poster at the SIGDA PhD Forum, IEEE/ACM Design Automation Conference (DAC)</i>, Austin, Texas, USA, June 2017.<br>
-                            </th>
-                        </tr>
-                    </tbody></table></li>                                                                                                                                                                            
-                  <li><table>
-                        <tbody><tr>
-                            <th class="tagcell">
-                                <div class="tag working">PT11</div>
-                            </th>
-                            <th class="content">
-                                <span class="title">Hacking Digital Microfluidic High-Level Synthesis</span> <br>
-                                <i>Poster at Hack@DAC contest, IEEE/ACM Design Automation Conference (DAC)</i>, Austin, Texas, USA, June 2017.<br>
-                                [ <font color="red">Presented by Jack Tang, NYU</font>].
-                            </th>
-                        </tr>
-                    </tbody></table></li>                                                                                                                                                                            
-                  <li><table>
-                        <tbody><tr>
-                            <th class="tagcell">
-                                <div class="tag working">PT10</div>
-                            </th>
-                            <th class="content">
-                                <span class="title">CoSyn: Efficient Single-Cell Analysis Using a Hybrid Microfluidic Platform</span> <br>
-                                <i><font color="red">Invited Talk</font> at the Technical University of Munich</i>, Munich, Germany, April 2017.<br>
-                                [ Hosted by Professor Ulf Schlichtmann ]
-                            </th>
-                        </tr>
-                    </tbody></table></li>  
-                  <li><table>
-                        <tbody><tr>
-                            <th class="tagcell">
-                                <div class="tag working">PT9</div>
-                            </th>
-                            <th class="content">
-                                <span class="title">CoSyn: Efficient Single-Cell Analysis Using a Hybrid Microfluidic Platform</span> <br>
-                                <i>Talk at the IEEE/ACM Design, Automation and Test in Europe Conference (DATE)</i>, Lausanne, Switzerland, March 2017.<br>
-                            </th>
-                        </tr>
-                    </tbody></table></li>
-                  <li><table>
-                        <tbody><tr>
-                            <th class="tagcell">
-                                <div class="tag working">PT8</div>
-                            </th>
-                            <th class="content">
-                                <span class="title">Cyberphysical Integration for Digital Microfluidic Biochips</span> <br>
-                                <i>Poster at the NSF CPS PI Meeting</i>, Arlington, Virginia, USA, November 2016.<br>
-                            </th>
-                        </tr>
-                    </tbody></table></li>  
-                  <li><table>
-                        <tbody><tr>
-                            <th class="tagcell">
-                                <div class="tag working">PT7</div>
-                            </th>
-                            <th class="content">
-                                <span class="title">A Real-Time Digital-Microfluidic Platform for Epigenetics</span> <br>
-                                <i>Talk and poster at the Embedded Systems Week (ESWeek)</i>, Pittsburgh, Pennsylvania, USA, October 2016.<br>
-                            </th>
-                        </tr>
-                    </tbody></table></li> 
-                  <li><table>
-                        <tbody><tr>
-                            <th class="tagcell">
-                                <div class="tag working">PT6</div>
-                            </th>
-                            <th class="content">
-                                <span class="title">A Real-Time Digital-Microfluidic Platform for Epigenetics</span> <br>
-                                <i>Talk at Duke ECE Graduate Student Workshop</i>, Durham, North Carolina, USA, September 2016.<br>
-                            </th>
-                        </tr>
-                    </tbody></table></li>  
-                  <li><table>
-                        <tbody><tr>
-                            <th class="tagcell">
-                                <div class="tag working">PT5</div>
-                            </th>
-                            <th class="content">
-                                <span class="title">Design and Automated Control of Cyberphysical Digital-Microfluidic Biochips: From Error Recovery Towards Quantitative Analysis</span> <br>
-                                <i><font color="red">Invited Talk</font> at the University of Bremen</i>, Bremen, Germany, May 2016.<br>
-                                [ Hosted by Professor Rolf Drechsler ]
-                            </th>
-                        </tr>
-                    </tbody></table></li>   
-                  <li><table>
-                        <tbody><tr>
-                            <th class="tagcell">
-                                <div class="tag working">PT4</div>
-                            </th>
-                            <th class="content">
-                                <span class="title">Integrated and Real-Time Quantitative Analysis Using Cyberphysical Digital-Microfluidic Biochips</span> <br>
-                                <i>Talk at the IEEE/ACM Design, Automation and Test in Europe Conference (DATE)</i>, Dresden, Germany, March 2016.<br>
-                            </th>
-                        </tr>
-                    </tbody></table></li>  
-                  <li><table>
-                        <tbody><tr>
-                            <th class="tagcell">
-                                <div class="tag working">PT3</div>
-                            </th>
-                            <th class="content">
-                                <span class="title">Integrated and Real-Time Quantitative Analysis Using Cyberphysical Digital-Microfluidic Biochips</span> <br>
-                                <i>Poster at Duke ECE Graduate Student Workshop</i>, Durham, North Carolina, USA, September 2015.<br>
-                            </th>
-                        </tr>
-                    </tbody></table></li>     
-                  <li><table>
-                        <tbody><tr>
-                            <th class="tagcell">
-                                <div class="tag working">PT2</div>
-                            </th>
-                            <th class="content">
-                                <span class="title">Experimental Demonstration of Error Recovery in an Integrated Cyberphysical Digital-Microfluidic Platform</span> <br>
-                                <i>Talk at IEEE Biomedical Circuits & Systems Conference (BioCAS)</i>, Atlanta, Georgia, USA, October 2015.<br>
-                            </th>
-                        </tr>
-                    </tbody></table></li> 
-                  <li><table>
-                        <tbody><tr>
-                            <th class="tagcell">
-                                <div class="tag working">PT1</div>
-                            </th>
-                            <th class="content">
-                                <span class="title">Cyberphysical Integration for Digital Microfluidic Biochips</span> <br>
-                                <i>Poster at the NSF CPS PI Meeting</i>, Arlington, Virginia, USA, November 2014.<br>
-                            </th>
-                        </tr>
-                    </tbody></table></li>                                                                                                                                                                                         
-                </ul>
-            </div>
+            		<h1><font color="red">Posters & Talks</font></h1>
+                	<ol reversed>
+                  	<li><i><font color="blue">Biologically Inspired Neuro-Symbolic Computing for Human-Centered AI</font>,</i> Talk at UT Dallas, Dallas, Texas, January 2025. </li>
+			<li><i><font color="blue">Efficient Design of a Hyperdimensional Processing Unit for Multi-Layer Cognition</font>,</i> Talk and Poster at the IEEE/ACM Design, Automation and Test in Europe Conference (DATE), Valencia, Spain, March 2024. </li>
+			<li><i><font color="blue">The Hyperdimensional Processing Unit</font>,</i> Poster at IBM IEEE CAS/EDS AI Compute Symposium, Yorktown Heights, New York, USA, October 2022. [ Presented by Youbin Kim ] </li>
+			<li><i><font color="blue">AdaPool: Multi-Armed Bandits for Adaptive Virology Screening on Cyber-Physical Digital-Microfluidic Biochips</font>,</i> Talk at the ACM/IEEE Workshop on Machine Learning for CAD (MLCAD), Virtual, November 2020. </li>
+			<li><i><font color="blue">Internet of Microfluidic Things: Perspectives on System Architecture and Design Challenges</font>,</i> Talk at the IEEE/ACM International Conference on Computer-Aided Design (ICCAD), Colorado, USA, November 2019. </li>
+			<li><i><font color="blue">BioScan: Parameter-Space Exploration of Synthetic Biocircuits Using MEDA Biochips</font>,</i> Talk at the IEEE/ACM Design, Automation and Test in Europe Conference (DATE), Florence, Italy, March 2019. </li>
+			<li><i><font color="blue">Sortex: Efficient Timing-Driven Synthesis of Reconfigurable Flow-Based Biochips for Scalable Single-Cell Screening</font>,</i> Talk at the IEEE/ACM International Conference on Computer-Aided Design (ICCAD), Irvine, California, USA, November 2017. </li>
+			<li><i><font color="blue">Design and Optimization of Microfluidic Platforms for Scalable Biomolecular Quantitative Analysis</font>,</i> Poster at the SIGDA PhD Forum, IEEE/ACM Design Automation Conference (DAC), Austin, Texas, USA, June 2017. </li>
+			<li><i><font color="blue">Hacking Digital Microfluidic High-Level Synthesis</font>,</i> Poster at Hack@DAC contest, IEEE/ACM Design Automation Conference (DAC), Austin, Texas, USA, June 2017. [Presented by Jack Tang ] </li>
+			<li><i><font color="blue">CoSyn: Efficient Single-Cell Analysis Using a Hybrid Microfluidic Platform</font>,</i> <font color="red">Invited Talk</font> at the Technical University of Munich, Munich, Germany, April 2017. </li>
+			<li><i><font color="blue">CoSyn: Efficient Single-Cell Analysis Using a Hybrid Microfluidic Platform</font>,</i> Talk at the IEEE/ACM Design, Automation and Test in Europe Conference (DATE), Lausanne, Switzerland, March 2017. </li>
+			<li><i><font color="blue">Cyberphysical Integration for Digital Microfluidic Biochips</font>,</i> Poster at the NSF CPS PI Meeting, Arlington, Virginia, USA, November 2016. </li>
+			<li><i><font color="blue">A Real-Time Digital-Microfluidic Platform for Epigenetics</font>,</i> Talk and poster at the Embedded Systems Week (ESWeek), Pittsburgh, Pennsylvania, USA, October 2016. </li>
+			<li><i><font color="blue">A Real-Time Digital-Microfluidic Platform for Epigenetics</font>,</i> Talk at Duke ECE Graduate Student Workshop, Durham, North Carolina, USA, September 2016. </li>
+			<li><i><font color="blue">Design and Automated Control of Cyberphysical Digital-Microfluidic Biochips: From Error Recovery Towards Quantitative Analysis</font>,</i> <font color="red">Invited Talk</font> at the University of Bremen, Bremen, Germany, May 2016. </li>
+			<li><i><font color="blue">Integrated and Real-Time Quantitative Analysis Using Cyberphysical Digital-Microfluidic Biochips</font>,</i> Talk at the IEEE/ACM Design, Automation and Test in Europe Conference (DATE), Dresden, Germany, March 2016. </li>
+			<li><i><font color="blue">Integrated and Real-Time Quantitative Analysis Using Cyberphysical Digital-Microfluidic Biochips</font>,</i> Poster at Duke ECE Graduate Student Workshop, Durham, North Carolina, USA, September 2015. </li>
+			<li><i><font color="blue">Experimental Demonstration of Error Recovery in an Integrated Cyberphysical Digital-Microfluidic Platform</font>,</i> Talk at IEEE Biomedical Circuits & Systems Conference (BioCAS), Atlanta, Georgia, USA, October 2015. </li>
+			<li><i><font color="blue">Cyberphysical Integration for Digital Microfluidic Biochips</font>,</i> Poster at the NSF CPS PI Meeting, Arlington, Virginia, USA, November 2014. </li>
+                	</ol>
         </div>
+	    
         <div class="maintext" id="experience_place" style="display: none;">
         		<h1><font color="red">Online Education</font></h1> 
             <div class="ed_list">
