--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
         <div class="maintext" id="experience_place" style="display: none;">
 
             	<h1><font color="red">Teaching</font></h1>
-		<p><font color="blue"><strong>UC Berkeley:</strong></font></p> 
+		<h2>UC Berkeley:</h2>
 		<ul>
 			<li><strong><font color="blue">2021:</font></strong> <i>Computing with High-Dimensional Vectors (Neuroscience 299):</i> <strong>Guest Lecturer</strong></li>
 		</ul>
